--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "require": {
     "php": "^7.1 || ^8.0",
-    "yoti/yoti-php-sdk": "^3.1"
+    "yoti/yoti-php-sdk": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3",
+    "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3 || ^10",
     "squizlabs/php_codesniffer": "^3.4",
     "friendsofphp/php-cs-fixer": "^2.15",
     "brainmaestro/composer-git-hooks": "^2.8",
